infra/k8s/base/namespace.yaml
apiVersion: v1
kind: Namespace
metadata:
  name: smartbank-ml
  labels:
    app.kubernetes.io/managed-by: kustomize
    project: smartbankAI
